--- a/arch-linux/PKGBUILD
+++ b/arch-linux/PKGBUILD
@@ -4,7 +4,7 @@ pkgver=20091019
 pkgrel=1
 pkgdesc="cp with progress output and some nice features"
 arch=('i686' 'x86_64')
-url="http://github.com/lynix/vcp/"
+url="http://lynix.github.com/vcp"
 license=('GPL')
 makedepends=('git' 'glibc')
 depends=('glibc')
